--- a/index.html
+++ b/index.html
@@ -81,14 +81,11 @@
         </div>
         <div class="uni-container">
           <p class="UTP">
-            I became really interested in software & programming, even tho my
-            main career is focused in electronics. However, I found out this
-            passion a little late and it would involve quitting electronics for
-            software, studying other 3 or 4 years just to get a degree. Being
-            this a decision that involve quitting my 3 years of effort in
-            electronics for something that will not asure me domain of concepts
-            or a job. That's why I decided that being self-taught is a better
-            option, while finishing my electronics engineering.
+            I'm very interested in technology, and how it benefits human kind.
+            That's why I'm studying electronics and that's also why I'm very
+            excited in developing software. For me having the opportunity to
+            learn is a gift and that's why it's important to make the most of
+            everything and keep getting knowledge.
           </p>
         </div>
         <!-- FOTO SECTION -->
@@ -103,13 +100,11 @@
           </p>
           <ul>
             <li>Python</li>
-            <li>Matlab</li>
-            <li>JavaScript</li>
+            <li>Matlab/Octave</li>
           </ul>
           <ul>
-            <li>Html</li>
-            <li>CSS</li>
-            <li>Bootstrap</li>
+            <li>JavaScript</li>
+            <li>Html/CSS</li>
           </ul>
         </div>
       </div>
